Service Worker should use a correct user agent https://bugs.webkit.org/show_bug.cgi?id=180566 <rdar://problem/35926295>

Patch by Youenn Fablet <youenn@apple.com> on 2017-12-08
Reviewed by Chris Dumez.

Addendum to landed patch.
This change was removed from the last version of the patch but proves to be needed by Safari.

* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::establishWorkerContextConnectionToStorageProcess):
Added back setting the user agent at start of service worker in case a page is already created.

Canonical link: https://commits.webkit.org/196536@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225720 268f45cc-cd09-0410-ab3c-d52691b4dbfc